# MT_Grpo_qe

./: .gitignore  README.md  baseline.xlsx  vllm_infer.py
api/: api_r1_qwen3.py
ckpts/comet/WMT24-QE-task2-baseline/: LICENSE  README.md  hparams.yaml
ckpts/comet/wmt22-kiwi/: LICENSE  README.md  hparams.yaml
data/: process_data.py
verl/: comet_reward.py  comet_reward_batch.py  comet_reward_batch_decrepit.py  comet_reward_batch_with_ray.py  comet_reward_batch_wo_ray.py  custom_dapo_fast.sh  custom_dapo_highent_fast.sh  custom_grpo2.sh  custom_grpo3.sh  custom_grpo_fast.sh  custom_grpo_fast_backup.sh  custom_grpo_fast_initial.sh  custom_grpo_fast_qe.sh  custom_gtpo_fast.sh  custom_gtpo_fast_outsource.sh  jingfan_comet_reward_batch.py  jingfan_dapo_highent_fast.sh  merge.sh  qwen25_gen.py  select_gpus.sh  test_gpu_selection.sh
verl/recipe/dapo/: dapo_ray_trainer.py
verl/recipe/dapo/config/: dapo_trainer.yaml
verl/verl/trainer/: constants_ppo.py  main_ppo.py
verl/verl/workers/: fsdp_workers.py
wmt22-comet-legacy/: package dependency.txt  pyproject.toml  test.py
wmt22-comet-legacy/comet/: download_utils.py
wmt22-comet-legacy/comet/cli/: compare.py  mbr.py  score.py  train.py  train_o.py
wmt22-comet-legacy/comet/encoders/: bert.py  minilm.py  rembert.py  xlmr.py  xlmr_xl.py
wmt22-comet-legacy/comet/models/: __init__.py  base.py  metrics.py  utils.py  word_level_utils.py
wmt22-comet-legacy/comet/models/ranking/: ranking_metric.py
wmt22-comet-legacy/comet/models/regression/: cspec_metric.py  referenceless.py  regression_metric.py  unite_metric.py  unite_metric_multi_task.py
(+69 files in other folders)
