[tool.poetry]
name = "unbabel-comet"
version = "1.2.0"
description = "High-quality Machine Translation Evaluation"
authors = ["Ricardo Rei, Craig Stewart, Catarina Farinha, Alon Lavie"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Unbabel/COMET"
repository = "https://github.com/Unbabel/COMET"
documentation = "https://unbabel.github.io/COMET/html/index.html"
keywords = [
    "Machine Translation", 
    "Evaluation",
    "Unbabel",
    "COMET"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "comet"},
]
include = [
    "LICENSE",
    "pyproject.toml",
    "CONTRIBUTING.md"
]

[tool.poetry.scripts]
comet-train = 'comet.cli.train:train_command'
comet-score = 'comet.cli.score:score_command'
comet-compare = 'comet.cli.compare:compare_command'
comet-mbr = 'comet.cli.mbr:mbr_command'

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"
sentencepiece = "0.2.1"
pandas = "2.3.2"
transformers = "4.30.0"
pytorch-lightning = "2.5.4"
jsonargparse = "4.40.2"
torch = "2.8.0"
numpy = "2.2.6"
torchmetrics = "1.8.1"
sacrebleu = "2.5.1"
scipy = "1.15.3"
protobuf = "6.32.0"
entmax = "1.0"
optuna = "2.10.1"

[tool.poetry.dev-dependencies]
sphinx-markdown-tables = "0.0.15"
coverage = "^5.5"
scikit-learn = "0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
